# AULA-F108-PRO-Reverse-Engineering

./: .gitignore  LICENSE  README.md
Tools/: CMakeLists.txt
Tools/flasher/: CMakeLists.txt
Tools/flasher/include/: flasher.h
Tools/flasher/src/: flasher.c  hid.c  protocol.c
Tools/repacker/: CMakeLists.txt
Tools/repacker/include/: spi_blocks.h
Tools/repacker/src/: repacker.cpp
Tools/src/: CMakeLists.txt  repack.cpp  unpack.cpp
Tools/src/include/: spi_blocks.h
Tools/unpacker/: CMakeLists.txt
Tools/unpacker/include/: spi_blocks.h
Tools/unpacker/src/: unpacker.cpp
